# polygon-collection

./: LICENSE  README.md  pyproject.toml
src/contracts/: RKLCollection.sol
src/meta/curry-poster/: 1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  1033  (+3078 more)
src/scripts/: airdrop.py  deploy.py  deploy_polygon.py
src/scripts/utils/: kong-holder-addresses-4-feb-22.json  meta-curry-poster.py  snapshot-4-feb-22.json
